[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels2.gd" type="Script" id=1]
[ext_resource path="res://sprits/sprits/levels_bottons_sprits/level1_image.png" type="Texture" id=2]
[ext_resource path="res://sprits/sprits/levels_bottons_sprits/level2_image.png" type="Texture" id=3]
[ext_resource path="res://sprits/sprits/levels_bottons_sprits/level3_image.png" type="Texture" id=4]
[ext_resource path="res://sprits/sprits/levels_bottons_sprits/level4_image.png" type="Texture" id=5]
[ext_resource path="res://sprits/sprits/levels_bottons_sprits/level5_image.png" type="Texture" id=6]
[ext_resource path="res://sprits/sprits/levels_bottons_sprits/level6_image.png" type="Texture" id=7]
[ext_resource path="res://sprits/sprits/levels_bottons_sprits/level7_image.png" type="Texture" id=8]
[ext_resource path="res://sprits/sprits/levels_bottons_sprits/level8_image.png" type="Texture" id=9]
[ext_resource path="res://sprits/backgrownd.png" type="Texture" id=10]
[ext_resource path="res://sprits/sprits/back.png" type="Texture" id=11]
[ext_resource path="res://assets/sound/02 - BWV 1007 - Prelude.ogg" type="AudioStream" id=12]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -600.0
margin_right = 960.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="v" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0989
margin_top = -377.592
margin_right = 1612.1
margin_bottom = 222.408
custom_constants/separation = 400

[node name="h" type="HBoxContainer" parent="v"]
margin_right = 1592.0
margin_bottom = 100.0
custom_constants/separation = 400

[node name="t1" type="TextureButton" parent="v/h"]
margin_right = 98.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )

[node name="t2" type="TextureButton" parent="v/h"]
margin_left = 498.0
margin_right = 596.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )

[node name="t3" type="TextureButton" parent="v/h"]
margin_left = 996.0
margin_right = 1094.0
margin_bottom = 100.0
texture_normal = ExtResource( 4 )

[node name="t4" type="TextureButton" parent="v/h"]
margin_left = 1494.0
margin_right = 1592.0
margin_bottom = 100.0
texture_normal = ExtResource( 5 )

[node name="h2" type="HBoxContainer" parent="v"]
margin_top = 500.0
margin_right = 1592.0
margin_bottom = 600.0
custom_constants/separation = 400

[node name="t5" type="TextureButton" parent="v/h2"]
margin_right = 98.0
margin_bottom = 100.0
texture_normal = ExtResource( 6 )

[node name="t6" type="TextureButton" parent="v/h2"]
margin_left = 498.0
margin_right = 596.0
margin_bottom = 100.0
texture_normal = ExtResource( 7 )

[node name="t7" type="TextureButton" parent="v/h2"]
margin_left = 996.0
margin_right = 1094.0
margin_bottom = 100.0
texture_normal = ExtResource( 8 )

[node name="t8" type="TextureButton" parent="v/h2"]
margin_left = 1494.0
margin_right = 1592.0
margin_bottom = 100.0
texture_normal = ExtResource( 9 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 960.013, 600.007 )
texture = ExtResource( 10 )

[node name="back" type="TextureButton" parent="."]
margin_left = 1198.19
margin_top = 1023.58
margin_right = 1667.19
margin_bottom = 1146.58
texture_normal = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
mix_target = 1
[connection signal="mouse_entered" from="v/h/t1" to="." method="_on_t1_mouse_entered"]
[connection signal="mouse_exited" from="v/h/t1" to="." method="_on_t1_mouse_exited"]
[connection signal="pressed" from="v/h/t1" to="." method="_on_t1_pressed"]
[connection signal="mouse_entered" from="v/h/t2" to="." method="_on_t2_mouse_entered"]
[connection signal="mouse_exited" from="v/h/t2" to="." method="_on_t2_mouse_exited"]
[connection signal="pressed" from="v/h/t2" to="." method="_on_t2_pressed"]
[connection signal="mouse_entered" from="v/h/t3" to="." method="_on_t3_mouse_entered"]
[connection signal="mouse_exited" from="v/h/t3" to="." method="_on_t3_mouse_exited"]
[connection signal="pressed" from="v/h/t3" to="." method="_on_t3_pressed"]
[connection signal="mouse_entered" from="v/h/t4" to="." method="_on_t4_mouse_entered"]
[connection signal="mouse_exited" from="v/h/t4" to="." method="_on_t4_mouse_exited"]
[connection signal="pressed" from="v/h/t4" to="." method="_on_t4_pressed"]
[connection signal="mouse_entered" from="v/h2/t5" to="." method="_on_t5_mouse_entered"]
[connection signal="mouse_exited" from="v/h2/t5" to="." method="_on_t5_mouse_exited"]
[connection signal="pressed" from="v/h2/t5" to="." method="_on_t5_pressed"]
[connection signal="mouse_entered" from="v/h2/t6" to="." method="_on_t6_mouse_entered"]
[connection signal="mouse_exited" from="v/h2/t6" to="." method="_on_t6_mouse_exited"]
[connection signal="pressed" from="v/h2/t6" to="." method="_on_t6_pressed"]
[connection signal="mouse_entered" from="v/h2/t7" to="." method="_on_t7_mouse_entered"]
[connection signal="mouse_exited" from="v/h2/t7" to="." method="_on_t7_mouse_exited"]
[connection signal="pressed" from="v/h2/t7" to="." method="_on_t7_pressed"]
[connection signal="mouse_entered" from="v/h2/t8" to="." method="_on_t8_mouse_entered"]
[connection signal="mouse_exited" from="v/h2/t8" to="." method="_on_t8_mouse_exited"]
[connection signal="pressed" from="v/h2/t8" to="." method="_on_t8_pressed"]
[connection signal="mouse_entered" from="back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
